# OpenParticle

./: README.md  build.gradle  build.gradle.kts  copy.py  gradle.properties  root.gradle.kts  settings.gradle.kts
cpp/include/: pch.h
cpp/src/openparticle/: ParticleManager.cpp  ParticleManager.h  ParticleReader.h  ParticleRender.cpp  ParticleRender.h  ParticleTicker.cpp
cpp/src/test/: test.cpp
src/main/cpp/: .clang-tidy  CMakeLists.txt
src/main/cpp/include/: pch.h
src/main/cpp/src/openparticle/: ParticleManager.h  ParticleReader.cpp  ParticleReader.h  ParticleRender.cpp  ParticleRender.h  ParticleTicker.cpp  ParticleTicker.h
src/main/cpp/src/test/: test.cpp
src/main/java/yancey/openparticle/api/math/: Vec3.java
src/main/resources/: fabric.mod.json  openparticle.mixins.json
versions/: mapping-1.18.2-1.18.1.txt
versions/1.16-fabric/: gradle.properties
versions/1.16-fabric/src/main/resources/: fabric.mod.json
versions/1.16.1-fabric/: gradle.properties
versions/1.16.1-fabric/src/main/resources/: fabric.mod.json
versions/1.16.2-fabric/: gradle.properties
versions/1.16.2-fabric/src/main/resources/: fabric.mod.json
versions/1.16.3-fabric/: gradle.properties
versions/1.16.4-fabric/: gradle.properties
versions/1.17-fabric/: gradle.properties
versions/1.17.1-fabric/: gradle.properties
versions/1.18-fabric/: gradle.properties
versions/1.18.1-fabric/: gradle.properties
versions/1.19-fabric/: gradle.properties
versions/1.19.1-fabric/: gradle.properties
versions/1.19.2-fabric/: gradle.properties
versions/1.19.3-fabric/: gradle.properties
versions/1.19.4-fabric/: gradle.properties
(+96 files in other folders)
